# legal-diff

./: README.md  package.json  pyproject.toml  scrapy.cfg  webpack.config.js
pisrs_scraper/: items.py  middlewares.py  pipelines.py  settings.py
pisrs_scraper/spiders/: npb.py
src/: index.js
tests/: conftest.py
tests/cassettes/: TestNpbSpider.test_parse.json
tests/spiders/: test_npb_.py
